# profbot_iu

./: .dockerignore  .gitignore  Dockerfile  README.md  create_template.py  docker-compose.yaml  migrate_locks.py  pyproject.toml  run.py  schema.sql
app/: database.py  handlers.py  keyboards.py  main.py  middleware.py  schedule.py  settings.py  states.py  validators.py
app/admin/: __init__.py  handlers.py  keyboards.py  states.py
app/news/: handlers.py
app/student/: __init__.py  handlers.py  keyboards.py  pdf_generator.py  schedule.py  states.py  status_checker.py  validators.py
